crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_keeps_enum_members_in_declaration_order.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/enumerations/Level.md =====
# Enumeration: Level

Level.

## Signature

```ts
export function Level(): void
```

## Enum Members

- `Medium` `enumMember` `unknown`
- `High` `enumMember` `unknown`
- `Low` `enumMember` `unknown`
===== combinators/index.md =====
# combinators

_1 symbols · 1 enumerations · 3 members_

## Enumerations

- [Level](./enumerations/Level.md) - Level.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 enumerations · 3 members_

## Modules

- [combinators](./combinators/index.md)
