crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_keeps_linking_references_before_a_colon_or_a_call.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/Mixin.md =====
# Function: Mixin()

## Signature

```ts
export function Mixin(): void
```
===== combinators/functions/first.md =====
# Function: first()

## Signature

```ts
export function first(): void
```
===== combinators/functions/input.md =====
# Function: input()

## Signature

```ts
export function input(): void
```
===== combinators/functions/key.md =====
# Function: key()

## Signature

```ts
export function key(): void
```
===== combinators/functions/label.md =====
# Function: label()

## Signature

```ts
export function label(): void
```
===== combinators/functions/make.md =====
# Function: make()

Make.

## Signature

```ts
export function make(): void
```

## Parameters

| Name | Type | Description |
| --- | --- | --- |
| `a` | `typeof` [`required`](./required.md) |  |
| `b` | [`Options`](../type-aliases/Options.md) `extends` `object` ? [`Options`](../type-aliases/Options.md) : `never` |  |
| `c` | [`Options`](../type-aliases/Options.md) `extends` [`Base`](../type-aliases/Base.md) ? [`Options`](../type-aliases/Options.md) `extends` `object` ? [`Options`](../type-aliases/Options.md) : [`Options`](../type-aliases/Options.md) : [`Options`](../type-aliases/Options.md) |  |
| `d` | `T` `extends` [`Base`](../type-aliases/Base.md) ? `keyof` [`Options`](../type-aliases/Options.md) : `never` |  |
| `e` | `T` `extends` [`Base`](../type-aliases/Base.md) ? [`Options`](../type-aliases/Options.md) \| [`Base`](../type-aliases/Base.md) : `never` |  |
| `f` | `T` `extends` [`Base`](../type-aliases/Base.md) ? () =\> [`Options`](../type-aliases/Options.md) : `never` |  |
| `g` | `T` `extends` [`Base`](../type-aliases/Base.md) ? (`x`: `T`) =\> `x` `is` [`Options`](../type-aliases/Options.md) : `never` |  |
| `h` | [`Mixin`](./Mixin.md)([`Base`](../type-aliases/Base.md)) |  |
| `i` | `T` `extends` [`Base`](../type-aliases/Base.md) ? ([`Options`](../type-aliases/Options.md)) : `never` |  |
===== combinators/functions/parse.md =====
# Function: parse()

## Signature

```ts
export function parse(): void
```
===== combinators/functions/required.md =====
# Function: required()

## Signature

```ts
export function required(): void
```
===== combinators/functions/value.md =====
# Function: value()

## Signature

```ts
export function value(): void
```
===== combinators/index.md =====
# combinators

_11 symbols · 9 functions · 2 types · 9 parameters_

## Functions

- [first](./functions/first.md)
- [input](./functions/input.md)
- [key](./functions/key.md)
- [label](./functions/label.md)
- [make](./functions/make.md) - Make.
- [Mixin](./functions/Mixin.md)
- [parse](./functions/parse.md)
- [required](./functions/required.md)
- [value](./functions/value.md)

## Type Aliases

- [Base](./type-aliases/Base.md)
- [Options](./type-aliases/Options.md)

===== combinators/type-aliases/Base.md =====
# Type Alias: Base

===== combinators/type-aliases/Options.md =====
# Type Alias: Options

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 11 symbols · 9 functions · 2 types · 9 parameters_

## Modules

- [combinators](./combinators/index.md)
