crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_keeps_non_structured_tags_in_tags_section.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/run.md =====
# Function: run()

> [!WARNING]
> This API is experimental and may change in future versions.

Run it.

## Since

1.0.0

## Signature

```ts
export function run(): void
```

## Tags

- `@see` — related
===== combinators/index.md =====
# combinators

_1 symbols · 1 functions_

## Functions

- [run](./functions/run.md) - Run it.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions_

## Modules

- [combinators](./combinators/index.md)
