crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_links_references_next_to_declared_names.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/Mixin.md =====
# Function: Mixin()

## Signature

```ts
export function Mixin(): void
```
===== combinators/functions/first.md =====
# Function: first()

## Signature

```ts
export function first(): void
```
===== combinators/functions/input.md =====
# Function: input()

## Signature

```ts
export function input(): void
```
===== combinators/functions/key.md =====
# Function: key()

## Signature

```ts
export function key(): void
```
===== combinators/functions/label.md =====
# Function: label()

## Signature

```ts
export function label(): void
```
===== combinators/functions/make.md =====
# Function: make()

Make.

## Signature

```ts
export function make(): void
```

## Parameters

| Name | Type | Description |
| --- | --- | --- |
| `a` | { `parse`(`input`: `string`): [`Options`](../type-aliases/Options.md) } |  |
| `b` | `value` `is` [`Options`](../type-aliases/Options.md) |  |
| `c` | `asserts` `value` `is` [`Options`](../type-aliases/Options.md) |  |
| `d` | `Array`\<{ `required`: [`Options`](../type-aliases/Options.md) }\> |  |
| `e` | `Map`\<`string`, { `value`: [`Options`](../type-aliases/Options.md) }\> |  |
| `f` | `new` (`value`: [`Options`](../type-aliases/Options.md)) =\> [`Base`](../type-aliases/Base.md) |  |
| `g` | { \[`key`: `string`\]: [`Options`](../type-aliases/Options.md) } |  |
===== combinators/functions/parse.md =====
# Function: parse()

## Signature

```ts
export function parse(): void
```
===== combinators/functions/required.md =====
# Function: required()

## Signature

```ts
export function required(): void
```
===== combinators/functions/value.md =====
# Function: value()

## Signature

```ts
export function value(): void
```
===== combinators/index.md =====
# combinators

_11 symbols · 9 functions · 2 types · 7 parameters_

## Functions

- [first](./functions/first.md)
- [input](./functions/input.md)
- [key](./functions/key.md)
- [label](./functions/label.md)
- [make](./functions/make.md) - Make.
- [Mixin](./functions/Mixin.md)
- [parse](./functions/parse.md)
- [required](./functions/required.md)
- [value](./functions/value.md)

## Type Aliases

- [Base](./type-aliases/Base.md)
- [Options](./type-aliases/Options.md)

===== combinators/type-aliases/Base.md =====
# Type Alias: Base

===== combinators/type-aliases/Options.md =====
# Type Alias: Options

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 11 symbols · 9 functions · 2 types · 7 parameters_

## Modules

- [combinators](./combinators/index.md)
